horizontal scroll fix?

--- a/main.css
+++ b/main.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
+html, body{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 body{
     font-family: 'Poppins', sans-serif;
 }
